# Quorum---Council-LLMs

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  DEMO_DEPLOY.md  DESIGN_SYSTEM.md  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  PLAN.md  PLAN_MODE.md  README.md  SECURITY.md  TODOS.md  docker-compose.override.yml  docker-compose.yml  fly.toml  package.json  render.yaml  skills-lock.json
.claude/: settings.local.json
.cursor/: scratchpad.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  quorum-example.yml  rag-quality-gate.yml
backend/: .env.example  Dockerfile  package-lock.json  package.json
backend/data/: benchmark_dataset.json  benchmark_dataset_synthetic.json  benchmark_mini.json
backend/src/: index.js
cli/: package-lock.json  package.json
demo/: run-demo.sh  run-scenario.js
docs/: ARCHITECTURE.md  DECISIONS.md  observability-audit.md
frontend/: .env.example  Dockerfile  build_output.txt  index.html  jsconfig.json  nginx.conf  package-lock.json  package.json  tailwind.config.js
mintlify/: docs.json  how-it-works.mdx  index.mdx  observability.mdx  quickstart.mdx
sample-data/: adaptive-demo-test-cases.json  demo-test-cases.json
scripts/: downloadDatasets.py  record-demo.js  runBenchmark.js
sdk/: README.md  package.json
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: basic.py  ci_gate.py
sdk/python/quorum_eval/: __init__.py  client.py  exceptions.py  models.py
(+219 files in other folders)
