[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "quorum-eval"
version = "0.1.0"
description = "Python client for the Quorum RAG evaluation platform — Council of LLMs"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["rag", "evaluation", "llm", "ai", "testing"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx", "httpx"]

[project.urls]
Homepage = "https://quorum.ai"
Repository = "https://github.com/quorum-ai/quorum-eval"

[tool.setuptools.packages.find]
where = ["."]
include = ["quorum_eval*"]
